--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
               Crea y <span class="span">Gestiona</span>
             </h2>
 
-            <ul class="has-scrollbar" id="shop-list">
+            <ul class="has-scrollbar">
 
               <li class="scrollbar-item">
                 <div class="latest-game-card">
